--- a/src/components/DesktopIcon.module.css
+++ b/src/components/DesktopIcon.module.css
@@ -1,8 +1,7 @@
 .desktopIcon {
   display: flex;
-  max-width: 100%;
-  max-height: 100%;
-  overflow: hidden;
+  width: 80px;
+  height: 80px;
   flex-direction: column;
   align-items: center;
   gap: 4px;
